# claude-coach

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
claude_coach/: __init__.py  __main__.py  html.py  parser.py  readiness.py  report.py  rules.py
skill/: SKILL.md
tests/: test_html.py  test_parser.py  test_rules.py
tests/fixtures/: sample_session.jsonl
